--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 tensorflow==2.17.1
 numpy==1.26.4
-opencv-python==4.9.0.80
+opencv-python-headless
 streamlit==1.32.0
 pillow==10.2.0
 scikit-learn==1.3.2
